# airtable-env

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
golang/: main.go
src/: main.rs
