[package]
name = "airtable-env"
description = "Use Airtable for Environment Variables"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Abhi Yerra <abhi@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
airtable-api = "0.1.2"
tokio = { version = "0.2", features = ["full"] }
