[package]
name = "airtable-env"
description = "Use Airtable for Environment Variables"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abhiyerra/airtable-env"
version = "0.1.6"
readme = "README.md"
categories = ["command-line-utilities"]
authors = ["Abhi Yerra <abhi@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
airtable-api = "0.1"
tokio = { version = "0.2", features = ["macros"] }
